[TOL-1209] Add search api (#21)
* [TOL-1209] Add search api

* Update to use existing problemJson handler

* Fix conflict
